--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -1,59 +1,28 @@
-{% extends "base.html" %} 
-{% block css %}
-    <link rel="stylesheet" href="{{url_for('static', filename='css/thankyou.css')}}" />
-{% endblock %}
-{% block title %}台北一日遊 - 感謝訂購{% endblock %}
-
-{% block main %}
+{% extends "base.html" %} {% block css %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/thankyou.css')}}" />
+{% endblock %} {% block title %}台北一日遊 - 感謝訂購{% endblock %} {% block main %}
 <div class="main-container hide-before-log-in" id="main">
-  <div class="has-order hide">
+  <div class="has-order">
     <section class="title">
-        <h2 class="button-reg thank-you">行程預定成功，非常感謝您的訂購！</h2>
-        <h2 class="button-bold order-num">訂單編號： <span id="orderNum">1622286732</span></h2>
-        <span class="body-reg remember">（ 請記住此編號，或到會員中心查詢歷史訂單 )</span>
+      <h2 class="button-reg thank-you">行程預定成功，非常感謝您的訂購！</h2>
+      <h2 class="button-bold order-num">訂單編號： <span id="orderNum">1622286732</span></h2>
+      <span class="body-reg remember">（ 請記住此編號，或到會員中心查詢歷史訂單 )</span>
     </section>
-    <section class="order-attraction" id="attraction-info">
-        <article class="order-attraction-info">
-            <div class="attraction-image-container">
-                <img src="http://www.travel.taipei/d_upload_ttn/sceneadmin/pic/11000979.jpg" alt="關渡、金色水岸、八里左岸自行車道">
-            </div>
-            <div class="order-detail">
-                <h3 class="body-bold" id="attractionName">關渡、金色水岸、八里左岸自行車道</h3>
-                <p class="body-bold">日期：<span class="body-reg" id="bookingDate">2021-07-05</span></p>
-                <p class="body-bold">時間：<span class="body-reg" id="bookingTime">早上 9 點到下午 4 點</span></p>
-                <p class="body-bold">地點：<span class="body-reg" id="location">臺北市  北投區關渡</span></p>
-            </div>
-        </article>
-        <article class="order-attraction-info">
-            <div class="attraction-image-container">
-                <img src="http://www.travel.taipei/d_upload_ttn/sceneadmin/pic/11000729.jpg" alt="國立臺灣科學教育館">
-            </div>
-            <div class="order-detail">
-                <h3 class="body-bold" id="attractionName">國立臺灣科學教育館</h3>
-                <p class="body-bold">日期：<span class="body-reg" id="bookingDate">2021-06-23</span></p>
-                <p class="body-bold">時間：<span class="body-reg" id="bookingTime">早上 9 點到下午 4 點</span></p>
-                <p class="body-bold">地點：<span class="body-reg" id="location">臺北市  士林區士商路189號</span></p>
-            </div>
-        </article>
-        {# <p class="body-reg price">總計費用：<span id="price">4000</span> 元</p> #}
-    </section>
+    <section class="order-attraction" id="attraction-info"></section>
     <section class="contact">
-        <h2 class="button-bold">您的聯絡資訊</h2>
-        <article class="contact-info">
-            <p class="body-reg">聯絡姓名： <span id="username">彭彭</span></p>
-            <p class="body-reg">電子信箱： <span id="email">test@gmail.com</span></p>
-            <p class="body-reg">手機號碼： <span id="phone">0928012345</span></p>
-            <p class="body-bold reminder">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫。</p>
-        </article>
+      <h2 class="button- bold">您的聯絡資訊</h2>
+      <article class="contact-info">
+        <p class="body-reg">聯絡姓名： <span id="contactName">彭彭</span></p>
+        <p class="body-reg">電子信箱： <span id="contactEmail">test@gmail.com</span></p>
+        <p class="body-reg">手機號碼： <span id="contactPhone">0928012345</span></p>
+        <p class="body-bold reminder">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫。</p>
+      </article>
     </section>
   </div>
-  <div class="no-order">
+  <div class="no-order hide">
     <p class="button-bold">此訂單編號不存在</p>
   </div>
 </div>
-{% endblock %}
-
-{% block script %}
+{% endblock %} {% block script %}
 <script src="{{url_for('static', filename='js/renderThankyou.js')}}"></script>
 {% endblock %}
-
