--- a/static/css/thankyou.css
+++ b/static/css/thankyou.css
@@ -1,4 +1,7 @@
 .main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 90%;
   max-width: 1200px;
   margin: 46px auto 0;
@@ -35,7 +38,7 @@
 
 .order-attraction {
   width: 100%;
-  padding: 0 100px 40px;
+  padding: 0 100px 50px;
   border-bottom: var(--division-line);
 }
 
@@ -84,7 +87,7 @@
 
 /***** contact info *****/
 .contact {
-  margin: 40px 0 60px;
+  margin: 40px 0;
 }
 
 .contact h2 {
@@ -113,6 +116,30 @@
 .contact .reminder {
   margin-top: 20px;
   line-height: 28px;
+}
+
+.back-to-home {
+  text-decoration: none;
+  color: var(--teal);
+  border-bottom: 1px solid transparent;
+  transition: border-bottom 0.2s;
+}
+
+.back-to-home p {
+  letter-spacing: 1px;
+  line-height: 16px;
+  border: 1.5px solid var(--teal);
+  border-radius: 5px;
+  padding: 10px 20px;
+  text-align: center;
+  margin-bottom: 50px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.back-to-home p:hover {
+  cursor: pointer;
+  background-color: var(--teal);
+  color: #fff;
 }
 
 /*************************************/
