fixing issue of wrongly showing check icon and exclamation icon on input field

--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -136,6 +136,10 @@
 }
 
 .form-control.error img {
+  display: none;
+}
+
+.form-control.error .error-icon {
   display: block;
   position: absolute;
   width: 18px;
